# internal/router/router.go
@@ -4,6 +4,7 @@ import (
 	_ "banana-account-book.com/docs"
 
 	"banana-account-book.com/internal/libs/health"
+	"banana-account-book.com/internal/middlewares"
 	authPresentation "banana-account-book.com/internal/services/auth/presentation"
 	userPresentation "banana-account-book.com/internal/services/users/presentation"
 	"github.com/gofiber/fiber/v2"
@@ -17,10 +18,15 @@ import (
 // @license.name	Apache 2.0
 // @license.url	http://www.apache.org/licenses/LICENSE-2.0.html
 // @BasePath		/
-func Route(r *fiber.App, userController *userPresentation.UserController, authController *authPresentation.AuthController) {
+func Route(
+	r *fiber.App,
+	userController *userPresentation.UserController,
+	authController *authPresentation.AuthController,
+	authHandler *middlewares.AuthHandler,
+) {
 	health.Check(r)
 
-	userRoute := r.Group("/users")
+	userRoute := r.Group("/users", authHandler.Auth())
 	userController.Route(userRoute)
 
 	authRoute := r.Group("/auth")
